package com.primefuel.fulltank.platform.fulfillment.domain.model.queries;

public record GetAllDeliveriesQuery() {
}
